# Smartphone-HearingAid-Compression-NoiseReduction

./: README.md
Android-App/: local.properties
Android-App/1idea/: misc.xml  workspace.xml
Android-App/1idea/caches/: build_file_checksums.ser  gradle_models.ser
Android-App/1idea/libraries/: Gradle__com_android_support_constraint_constraint_layout_1_0_2_aar.xml  Gradle__com_android_support_support_annotations_24_2_0.xml  Gradle__com_android_support_test_espresso_espresso_core_2_2_2_aar.xml  Gradle__com_android_support_test_espresso_espresso_idling_resource_2_2_2_aar.xml  Gradle__com_android_support_test_exposed_instrumentation_api_publish_0_5_aar.xml  Gradle__com_android_support_test_rules_0_5_aar.xml  Gradle__com_android_support_test_runner_0_5_aar.xml  Gradle__com_androidplot_androidplot_core_1_5_0_aar.xml  Gradle__com_halfhp_fig_figlib_1_0_3_aar.xml
Android-App/app/: CMakeLists.txt  build.gradle  proguard-rules.pro
Android-App/app/src/main/: AndroidManifest.xml
Android-App/app/src/main/java/com/dsp/matlab/: BetterXYSeries.java  DataGraphActivity.java  DataListener.java  Filter.java  Filters.java  Monitor.java  PreferencesFragment.java  PreferencesUI.java  RealTime.java  Settings.java  Utilities.java  WaveFrame.java  WaveReader.java  WaveRecorder.java  WaveSaver.java
Android-App/app/src/main/jni/: MatlabNative.c
Android-App/app/src/main/jni/CoderFile/: FFTImplementationCallback.c  FFTImplementationCallback.h  SPL.c  SPL.h  SPL_data.c  SPL_data.h  SPL_emxutil.c  SPL_emxutil.h  SPL_initialize.c  SPL_initialize.h  SPL_internal_types.h  SPL_terminate.c  SPL_terminate.h  SPL_types.h  SpeechNoiseEstimator.c  SpeechNoiseEstimator.h  StatCircBuffer.c  StatCircBuffer.h  SystemCore.c  SystemCore.h  SystemCoreSPL.c  SystemCoreSPL.h  VAD.c  VAD.h  VAD_data.c  VAD_data.h  VAD_initialize.c  VAD_initialize.h  VAD_internal_types.h  VAD_rtwutil.c  VAD_rtwutil.h  VAD_terminate.c  VAD_terminate.h  VAD_types.h  applyBinaryScalarFunction.c  applyBinaryScalarFunction.h  casyi.c  casyi.h  cbesi.c  cbesi.h  (+22 more)
Android-App/app/src/main/res/layout/: datagraph.xml  recorder.xml
Android-App/app/src/main/res/values/: arrays.xml  strings.xml
Android-App/app/src/main/res/xml/: prefs.xml
Android-App/gradle/wrapper/: gradle-wrapper.properties
